# seaduck

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config_loose.yaml  AVISO.html  Global_ECCO.html  LICENSE  MANIFEST.in  Makefile  OceData.py  OceInterp.py  README.md  __init__.py  all_in_one.html  api_reference.html  bud_tut.html  contr_cod.html  contr_doc.html  environment.yml  genindex.html  get_masks.py  get_started.html  guide_for_developer.html  how_to_cite.html  how_to_install.html  ideal_test.html  internal_api_reference.html  interpolate.py  intro.html  kernelNweight.py  kernel_and_weight.py  lagarange.py  lagrange.py  lat2ind.py  network_of_object.html  notebooks.html  objects.inv  ocean_example.html  one_min_guide.html  (+17 more)
OceInterp/: OceData.py  OceInterp.py  RuntimeConf.py  __init__.py  cssn_compute-Copy1.py  eulerian.py  get_masks.py  kernelNweight.py  kernel_and_weight.py  lagrange.py  lagrangian.py  lat2ind.py  llc_face_connect.csv  point.py  smart_read.py  topology.py  utils.py
OceInterp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_sources/: bud_tut.md  contr_doc.md  get_started.md  how_to_install.md  ideal_test.md  intro.md  prep_env.md  reference.md
api_reference/: apiref_OceData.html  apiref_OceInterp.html  apiref_RelCoord.html  apiref_eulerian.html  apiref_eulerian_budget.html  apiref_getmasks.html  apiref_kernelNweight.html  apiref_lagrangian.html  apiref_lagrangian_budget.html  apiref_smartread.html  apiref_topology.html  apiref_utils.html
budget/: README.md
budget_tutorial/: mean_eul_budg.html  particle_bud_tut.html
ci/: environment-ci-numba.yml  environment-ci.yml
contribute/: contr_cod.html  contr_doc.html  prep_env.html  report_iss.html  tidyNpr.html  use_git.html
(+317 files in other folders)
