[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "dask[array]",
  "xarray"
]
description = "A python package that interpolates data from ocean dataset from both Eulerian and Lagrangian perspective. "
dynamic = ["version"]
license = {file = "LICENSE"}
name = "seaduck"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "matplotlib.*",
  "numba",
  "pooch",
  "scipy",
  "scipy.interpolate",
  "xgcm"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D",
  # pyupgrade
  "UP"
]
target-version = "py39"

[tool.setuptools]
packages = ["seaduck"]

[tool.setuptools_scm]
write_to = "seaduck/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
